; ModuleID = '/home/carl/AnghaBench/linux/drivers/pci/controller/extr_pcie-tango.c_smp8759_config_read.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/pci/controller/extr_pcie-tango.c_smp8759_config_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_bus = type { %struct.pci_config_window* }
%struct.pci_config_window = type { i32 }
%struct.tango_pcie = type { i64 }

@PCIBIOS_FUNC_NOT_SUPPORTED = common dso_local global i32 0, align 4
@SMP8759_MUX = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pci_bus*, i32, i32, i32, i32*)* @smp8759_config_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @smp8759_config_read(%struct.pci_bus* %0, i32 %1, i32 %2, i32 %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.pci_bus*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca %struct.pci_config_window*, align 8
  %13 = alloca %struct.tango_pcie*, align 8
  %14 = alloca i32, align 4
  store %struct.pci_bus* %0, %struct.pci_bus** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32* %4, i32** %11, align 8
  %15 = load %struct.pci_bus*, %struct.pci_bus** %7, align 8
  %16 = getelementptr inbounds %struct.pci_bus, %struct.pci_bus* %15, i32 0, i32 0
  %17 = load %struct.pci_config_window*, %struct.pci_config_window** %16, align 8
  store %struct.pci_config_window* %17, %struct.pci_config_window** %12, align 8
  %18 = load %struct.pci_config_window*, %struct.pci_config_window** %12, align 8
  %19 = getelementptr inbounds %struct.pci_config_window, %struct.pci_config_window* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call %struct.tango_pcie* @dev_get_drvdata(i32 %20)
  store %struct.tango_pcie* %21, %struct.tango_pcie** %13, align 8
  %22 = load i32, i32* %8, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %5
  %25 = load i32, i32* @PCIBIOS_FUNC_NOT_SUPPORTED, align 4
  store i32 %25, i32* %6, align 4
  br label %46

26:                                               ; preds = %5
  %27 = load %struct.tango_pcie*, %struct.tango_pcie** %13, align 8
  %28 = getelementptr inbounds %struct.tango_pcie, %struct.tango_pcie* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = load i64, i64* @SMP8759_MUX, align 8
  %31 = add nsw i64 %29, %30
  %32 = call i32 @writel_relaxed(i32 1, i64 %31)
  %33 = load %struct.pci_bus*, %struct.pci_bus** %7, align 8
  %34 = load i32, i32* %8, align 4
  %35 = load i32, i32* %9, align 4
  %36 = load i32, i32* %10, align 4
  %37 = load i32*, i32** %11, align 8
  %38 = call i32 @pci_generic_config_read(%struct.pci_bus* %33, i32 %34, i32 %35, i32 %36, i32* %37)
  store i32 %38, i32* %14, align 4
  %39 = load %struct.tango_pcie*, %struct.tango_pcie** %13, align 8
  %40 = getelementptr inbounds %struct.tango_pcie, %struct.tango_pcie* %39, i32 0, i32 0
  %41 = load i64, i64* %40, align 8
  %42 = load i64, i64* @SMP8759_MUX, align 8
  %43 = add nsw i64 %41, %42
  %44 = call i32 @writel_relaxed(i32 0, i64 %43)
  %45 = load i32, i32* %14, align 4
  store i32 %45, i32* %6, align 4
  br label %46

46:                                               ; preds = %26, %24
  %47 = load i32, i32* %6, align 4
  ret i32 %47
}

declare dso_local %struct.tango_pcie* @dev_get_drvdata(i32) #1

declare dso_local i32 @writel_relaxed(i32, i64) #1

declare dso_local i32 @pci_generic_config_read(%struct.pci_bus*, i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
